@@ -1,3 +1,7 @@
+Wed Jun 26 06:48:07 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (bigadd_int): Fix a buffer over read.
+
 Wed Jun 26 01:18:13 2013  Masaya Tarui  <tarui@ruby-lang.org>
 
 	* gc.c (is_before_sweep): Add new helper function that check the object
